4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/minio-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-client
  namespace: code-ua
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minio-client
  template:
    metadata:
        labels:
          app: minio-client
    spec:
      containers:
      - name: minio-client
        image: 10.110.0.3:5000/codeua-minio-mc:RELEASE.2021-04-22T17-40-00Z
        resources:
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 250Mi
        command:
        - "/bin/bash"
        - "-c"
        - "mc config host rm local && mc config host add --quiet --api s3v4 minio $MINIO_HOST $MINIO_ACCESS_KEY $MINIO_SECRET_KEY && mc mb --ignore-existing --region eu-west-1 minio/$ARTIFACTS_BUCKET minio/$EXT_DIFFS_BUCKET minio/$LFS_BUCKET minio/$UPLOADS_BUCKET minio/$PACKAGES_BUCKET minio/$DEP_PROXY_BUCKET minio/$TERRAFORM_BUCKET minio/$PAGES_BUCKET minio/$RUNNERS_CACHE_BUCKET && mc admin user add minio girs-admin girsgitlab && mc admin policy add minio adminpolicy /opt/minio-client/config/ad [...]
        volumeMounts:
          - mountPath: /opt/minio-client/config/admin.json
            name: minio-console-admin-conf
            subPath: admin.json
          - name: varlog
            mountPath: /var/log
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: mc-fluentd-config
      - name: minio-console-admin-conf
        configMap:
          name: minio-console-admin-conf-map
