4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/prometheus-agent.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-agent
  namespace: code-ua
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-agent
  template:
    metadata:
      labels:
        app: prometheus-agent
    spec:
      containers:
      - name: prometheus-agent
        image: 10.110.0.3:5000/codeua-prometheus-agent:1.9.1
        resources:
         requests:
           memory: "1Gi"
           cpu: "250m"
         limits:
           memory: "3Gi"
           cpu: "1000m"
        ports:
        - containerPort: 2305
        volumeMounts:
        - name: prometheus-agent-config
          mountPath: /etc/prom.conf
          subPath: prom.conf
      volumes:
      - name: prometheus-agent-config
        configMap:
          name: prometheus-agent-config
