4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/metrics.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: custom-metrics-apiserver
  name: custom-metrics-apiserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-metrics-apiserver
  template:
    metadata:
      labels:
        app: custom-metrics-apiserver
      name: custom-metrics-apiserver
    spec:
      serviceAccountName: default
      containers:
      - name: custom-metrics-apiserver
        image: 10.110.0.3:5000/codeua-k8s-prometheus-adapter:v0.4.1
        args:
          - adapter
          - --secure-port=6443
          - --logtostderr=true
          - --cert-dir=/tmp
          - --prometheus-url=http://10.110.4.149:10010/
          - --metrics-relist-interval=30s
          - --v=10
          - --config=/etc/adapter/config.yaml
        ports:
        - containerPort: 6443
        volumeMounts:
        - mountPath: /etc/adapter/config.yaml
          subPath: config.yaml
          name: config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: adapter-config
---
apiVersion: v1
kind: Service
metadata:
  name: custom-metrics-apiserver
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 6443
  selector:
    app: custom-metrics-apiserver
