4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/pages.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pages
  namespace: code-ua
spec:
  replicas: 2
  serviceName: pages
  selector:
    matchLabels:
      app: pages
  template:
    metadata:
      labels:
        app: pages
    spec:
      containers:
      - name: pages
        image: 10.110.0.3:5000/codeua-gitlab-ee:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        # livenessProbe:
        #   httpGet:
        #     path: /-/health
        #     port: 80
        #   initialDelaySeconds: 480  # 8 minutes
        #   periodSeconds: 5
        #   timeoutSeconds: 2
        # readinessProbe:
        #   httpGet:
        #     path: /-/ready?all=1
        #     port: 80
        #   initialDelaySeconds: 480  # 8 minutes
        #   periodSeconds: 5
        #   timeoutSeconds: 2
        ports:
        - containerPort: 8090
        volumeMounts:
          - name: pages-conf
            mountPath: /var/opt/gitlab/gitlab-pages
          - name: varlog
            mountPath: /var/log
          # - name: pages-shared-dir
          #   mountPath: /srv/gitlab/shared
          - name: pages-dir
            mountPath: /var/opt/gitlab/gitlab-rails/shared/pages
        command: ["/bin/bash"]
        args: ['-c', '/opt/gitlab/embedded/bin/gitlab-pages -config="/var/opt/gitlab/gitlab-pages/gitlab-pages-config"']
        # command: ["/bin/bash"]
        # args: ["-c", "sleep 3600"]
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: fluentd-config
      - name: pages-conf
        secret:
          secretName: pages-config
      # - name: pages-shared-dir
      #   persistentVolumeClaim:
      #     claimName: gitlab-data-pv-claim
      - name: pages-dir
        persistentVolumeClaim:
          claimName: pages-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pages
  namespace: code-ua
spec:
  selector:
    app: pages
  ports:
  - port: 8090
    targetPort: 8090
