4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/pgpool.yml
#
#   POSTGRESQL
#

# TODO: Volumes, lb, secrets
# Search how to deploy postgres to k8s - see if anything is missing besides the above

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgpool
  namespace: code-ua
spec:
  replicas: 1
  serviceName: pgpool
  selector:
    matchLabels:
      app: pgpool
  template:
    metadata:
      labels:
        app: pgpool
    spec:
      containers:
      - name: pgpool
        image: 10.110.0.3:5000/codeua-pgpool:4
        #resources:
        #  requests:
        #    memory: "32Mi"
        #    cpu: "10m"
        #  limits:
        #    memory: "128Mi"
        #    cpu: "500m"
        ports:
        - containerPort: 5432
      - name: pgpool-exporter
        image: 10.110.0.3:5000/codeua-pgpool-exporter:latest
        #resources:
        #  requests:
        #    memory: "32Mi"
        #    cpu: "10m"
        #  limits:
        #    memory: "128Mi"
        #    cpu: "500m"
        ports:
        - containerPort: 9719
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: fluentd-config
      dnsConfig:
        searches:
          - postgres.code-ua.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: pgpool
  namespace: code-ua
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pgpool
