4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/praefect.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: praefect
  namespace: code-ua
spec:
  replicas: 3
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: RollingUpdate
  serviceName: praefect
  selector:
    matchLabels:
      app: praefect
  template:
    metadata:
      labels:
        app: praefect
    spec:
      containers:
      - name: praefect
        image: 10.110.0.3:5000/codeua-gitlab-ee:latest
        resources:
         requests:
           memory: "1Gi"
           cpu: "250m"
         limits:
           memory: "3Gi"
           cpu: "1000m"
        ports:
        - containerPort: 2305
        - containerPort: 9652
        volumeMounts:
        - name: praefect-config
          mountPath: /etc/gitlab/gitlab.rb
          subPath: gitlab.rb
        - name: varlog
          mountPath: /var/log
        # - name: gitlab-pages-secret
        #   mountPath: /var/opt/gitlab/gitlab-rails/etc/gitlab_pages_secret
        #   subPath: gitlab_pages_secret
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: praefect-fluentd-config
      - name: praefect-config
        secret:
          secretName: praefect-config
---
apiVersion: v1
kind: Service
metadata:
  name: praefect
  namespace: code-ua
spec:
  ports:
  - port: 2305
    targetPort: 2305
  selector:
    app: praefect
