4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/registry.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: code-ua
spec:
  replicas: 2
  serviceName: registry
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: 10.110.0.3:5000/codeua-gitlab-container-registry:master
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: /etc/docker/registry
            name: registry-conf
          - mountPath: /scripts
            name: registry-scripts
          - mountPath: /var/lib/registry/docker
            name: registry-storage
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: fluentd-config
      - name: registry-conf
        secret:
          secretName: registry-config
      - name: registry-scripts
        configMap:
          name: registry-scripts-map
      - name: registry-storage
        persistentVolumeClaim:
          claimName: registry-storage-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: code-ua
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
