4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/sidekiq.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sidekiq
  namespace: code-ua
spec:
  replicas: 4
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: RollingUpdate
  serviceName: sidekiq
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
      - name: sidekiq
        image: 10.110.0.3:5000/codeua-gitlab-ee:latest
        resources:
         requests:
           memory: "1Gi"
           cpu: "250m"
         limits:
           memory: "3Gi"
           cpu: "1000m"
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: sidekiq-config
          mountPath: /etc/gitlab/gitlab.rb
          subPath: gitlab.rb
        - name: varlog
          mountPath: /var/log
        # - name: gitlab-pages-secret
        #   mountPath: /var/opt/gitlab/gitlab-rails/etc/gitlab_pages_secret
        #   subPath: gitlab_pages_secret
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: sidekiq-fluentd-config
      - name: sidekiq-config
        secret:
          secretName: sidekiq-config
---
apiVersion: v1
kind: Service
metadata:
  name: sidekiq
  namespace: code-ua
spec:
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    app: sidekiq
