4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/minio-console.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-console
  namespace: code-ua
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minio-console
  template:
    metadata:
      labels:
        app: minio-console
    spec:
      containers:
      - name: minio-console
        image: 10.110.0.3:5000/codeua-minio-console:v0.7.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        command: ["./console", "server", "--port", "8989"]
        ports:
        - containerPort: 8989
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: fluentd-config
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: code-ua
spec:
  selector:
    app: minio-console
  ports:
  - port: 8989
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-console
  namespace: code-ua
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: minio-console.code-ua.k3s
    http:
      paths:
      - path: /
        backend:
          serviceName: minio-console
          servicePort: 8989
