4th Year/[GIRS] Proj - Kubernetes Deployment of an HA Gitlab instance/nginx.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
  namespace: code-ua
spec:
  replicas: 2
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: RollingUpdate
  serviceName: nginx
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 10.110.0.3:5000/codeua-nginx:1.20
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        livenessProbe:
          exec:
            command:
              - "/bin/bash"
              - "-c"
              - "[[ $(curl -s -I -o /dev/null -w '%{http_code}' http://gitlab.code-ua/-/liveness) -eq 200 ]]"
          initialDelaySeconds: 5 
          periodSeconds: 10
          timeoutSeconds: 10
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-www-data
          mountPath: /var/www/static
        - name: nginx-conf
          mountPath: /etc/nginx
        - name: varlog
          mountPath: /var/log
      - name: fluentd-agent
        image: 10.110.0.3:5000/codeua-fluentd
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: config-volume
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: exporter
        image: 10.110.0.3:5000/codeua-nginx-exporter:latest
        ports:
        - containerPort: 9113
      volumes:
      - name: varlog
        emptyDir: {}
      - name: config-volume
        configMap:
          name: nginx-fluentd-config
      - name: nginx-www-data
      - name: nginx-conf
        configMap:
          name: nginx-conf-map
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: code-ua
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: code-ua
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: code-ua.k3s
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
